--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -13,7 +13,11 @@ width = 100%
 height = 24pt
 radius = 6
 
-wm-restack = bspwm;
+; idk what this does but without it polybar stays there in fullscreen
+; so dont touch i guess
+monitor-strict = true
+override-redirect = false
+wm-restack = bspwm
 
 ; dpi = 96
 
@@ -79,6 +83,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /mnt/Besenkammer
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
