--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -40,7 +40,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio memory cpu battery wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -83,7 +83,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = /mnt/Besenkammer
+; mount-1 = /mnt/Besenkammer
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
@@ -127,6 +127,37 @@ interval = 2
 format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+
+[module/battery]
+type = internal/battery
+
+format-prefix = "BAT "
+format-prefix-foreground = ${colors.primary}
+
+; This is useful in case the battery never reports 100% charge
+; Default: 100
+full-at = 99
+
+; format-low once this charge percentage is reached
+; Default: 10
+; New in version 3.6.0
+low-at = 5
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = ADP0
+
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 5
 
 [network-base]
 type = internal/network
